fix: overflow

--- a/static/css/steps.css
+++ b/static/css/steps.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    overflow-x: none;
+    overflow: hidden;
 }
 
 .position-image {
